--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 5000
-DB_URL = 
+DB_URL = "mongodb+srv://codersquad:7EIgdSN7GObCAN3X@cluster0.wpjep.mongodb.net/todo?retryWrites=true&w=majority"
 ACCESS_TOKEN="tyutrudrtjfgjfgjthrtjhgjghjghghurtu567865856jujgh6765fgjfgj@yhjh"
 REFRESH_TOKEN="tyutrudrtjfgjfgjthrtjhgjghjghghurtu567865856jujgh6765fgjfgj@yhjh"
